Vytvoření recyclerView a detaliní stránky

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,17 @@
         android:theme="@style/Theme.Receptar"
         tools:targetApi="31">
         <activity
-            android:name=".HlavniOkno"
+            android:name=".ReceptActivity"
             android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
